Added Local file cache for caching readmodels